--- a/accountapp/templates/accountapp/mailboxsnippets/intro.html
+++ b/accountapp/templates/accountapp/mailboxsnippets/intro.html
@@ -88,7 +88,7 @@
         {% else %}
         <a href="{% url 'accountapp:sentmailbox' pk=user.pk %}" class="btn-nav-disabled">
         {% endif %}
-            보낸 편지
+            작성한 편지
         </a>
         {% if slide == "savedletter" %}
         <a  class="btn-nav-abled">
