--- a/accountapp/templates/accountapp/mailboxsnippets/list.html
+++ b/accountapp/templates/accountapp/mailboxsnippets/list.html
@@ -4,6 +4,6 @@
     {% endfor %}
 {% else %}
     <div class="container-empty" >
-        <span class="text-content">저장된 편지가 없어요! &#129402;</span>
+        <span class="text-content">편지함에 편지가 없어요! &#129402;</span>
     </div>
 {% endif %}
