--- a/accountapp/templates/accountapp/setting.html
+++ b/accountapp/templates/accountapp/setting.html
@@ -8,7 +8,7 @@
     }
 </style>
 
-<header class="header">
+<header >
     {% include 'headersnippets/home.html' %}
     {% include 'headersnippets/mailbox.html' %}
 </header>
