--- a/homescreenapp/templates/homescreenapp/homescreensnippets/guide.html
+++ b/homescreenapp/templates/homescreenapp/homescreensnippets/guide.html
@@ -143,7 +143,7 @@
                 <img class="img-lock" src='/static/icons/homescreen/lock.png'>
             </div>
             <div class="text-index" >
-                독특한 질문으로 편지를 잠금!
+                둘만의 질문으로 편지를 잠금!
             </div>
         </div>
     </div>
