--- a/homescreenapp/templates/homescreenapp/homescreensnippets/intro.html
+++ b/homescreenapp/templates/homescreenapp/homescreensnippets/intro.html
@@ -176,7 +176,7 @@
             </span>
         </div>
         <div class="text-introduce">
-            재밌는 편지를 제작하고<br>
+            나만의 편지를 작성하고<br>
             둘만의 질문으로 잠금해요!
         </div>
     </div>
@@ -199,7 +199,7 @@
         </a>
     {% else %}
         <a href="{% url 'accountapp:login' %}" class="link">
-            <span class="text-link">로그인 후</span>
+            <span class="text-link">로그인하고</span>
             <span class="text-help">함께 시작해 볼까요?</span>
         </a>
     {% endif %}
