--- a/letterapp/templates/letterapp/finish.html
+++ b/letterapp/templates/letterapp/finish.html
@@ -7,10 +7,10 @@
     bottom:0.1rem
 }
 </style>
-<header class="header-empty tema-{{ target_letter.letter_content.tema }}" >
+<header class="header-empty" >
 </header>
 
-<main class="main-centralize tema-{{ target_letter.letter_content.tema }}" id="letter-finish">
+<main class="main-centralize" id="letter-finish">
     <div class="frame-centralize">
         <div class="spacing-title">
             <span class="text-title">
