--- a/letterapp/templates/letterapp/saved.html
+++ b/letterapp/templates/letterapp/saved.html
@@ -2,10 +2,10 @@
 {% load bootstrap4 %}
 {% block content %}
 
-<header class="header-empty tema-{{ target_letter.letter_content.tema }}">
+<header class="header-empty">
 </header>
 
-<main class="main-centralize tema-{{ target_letter.letter_content.tema }}">
+<main class="main-centralize">
     <div class="frame-centralize">
         <div class="spacing-title">
             <span class="text-title">
