--- a/letterapp/templates/letterapp/searchsnippets/guide.html
+++ b/letterapp/templates/letterapp/searchsnippets/guide.html
@@ -22,7 +22,7 @@
     }
 
     #letter-search-guide .text-content {
-        font-size: var(--fontsize-title);
+        font-size: var(--fontsize-index);
     }
 
     #letter-search-guide .spacing-content {
