--- a/templates/head.html
+++ b/templates/head.html
@@ -4,20 +4,17 @@
     <meta property="og:title" content="From.XoXo">
     <meta property="og:type" content="website">
     {% if intro_page %}
-    <meta property="og:image" content="/static/images/letter.png">
-        {% if target_letter.letter_info.sender_name %}
-            <meta property="og:description" content="{{ target_letter.letter_info.sender_name }}님께 편지가 도착했어요!">
-        {% else %}
-            <meta property="og:description" content="새로운 편지가 도착했어요!">
-        {% endif %}
+        <meta property="og:image" content="/static/images/letter.png">
+        <meta property="og:description" content="{{ target_letter.letter_info.sender_name }}님께 편지가 도착했어요!">
     {% else %}
-    <meta property="og:image" content="/static/images/logo.png">
-    <meta property="og:description" content="나만의 재밌는 편지를 선물해요">
+        <meta property="og:image" content="/static/images/logo.png">
+        <meta property="og:description" content="소중한 사람에게 전달하는 나만의 편지와 퀴즈">
     {% endif %}
+    <meta property="og:url" content="www.fromxoxo.com">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0, shrink-to-fit=no">
     <link rel="short icon" href="#">
     <title>From.XoXo</title>
-    <meta property="og:url" content="www.fromxoxo.com">
+
 
 
 <link rel="preconnect" href="https://fonts.googleapis.com">
