--- a/homescreenapp/templates/homescreenapp/homescreensnippets/footer.html
+++ b/homescreenapp/templates/homescreenapp/homescreensnippets/footer.html
@@ -75,19 +75,17 @@ footer .text-copyright{
             <div class="item-info">
                   <a href="{% url 'homescreenapp:privacypolicy' %}" target="_blank" rel="noopener noreferrer"
                      class="link-etc">개인정보처리방침</a>
-                  <a href="{% url 'homescreenapp:refund' %}" class="link-etc">환불 규정</a>
                   <a href="{% url 'homescreenapp:announcement' %}" target="_blank" rel="noopener noreferrer"
                      class="link-etc">공지사항</a>
                   <a href="{% url 'homescreenapp:termofuse' %}" target="_blank" rel="noopener noreferrer"
-                     class="link-etc">서비스 이용 약관</a>
-                  <a href="{% url 'homescreenapp:contact' %}" class="link-etc">고객센터</a>
-
+                     class="link-etc">서비스이용약관</a>
+                  <a href="{% url 'homescreenapp:bugreport' %}" target="_blank" rel="noopener noreferrer"
+                     class="link-etc">버그제보</a>
             </div>
             <div class="item-info">
                   <div class="text-buisinessinfo">From.XoXo 사업자 정보</div>
                   <div class="text-buisinessdetail">
-                        상호명 : 프롬쏘쏘 / 사업자번호 : 305-38-92150 / 사업장 주소지 : 서울특별시 동작구 만양로14마길 5-1(노량진동)
-                        / 대표자명 : 조경연 / 책임자 : 조경연, 김재욱 / 전화번호 : 0507-0178-1539 / 이메일 : fromxoxo1352@gmail.com
+                        상호명 : 프롬쏘쏘/ 대표자명 : 조경연 / 책임자 : 조경연, 김재욱 / fromxoxo1352@gmail.com/ 0507-0178-1539
                   </div>
             </div>
       </div>
