--- a/letter_infoapp/templates/letter_infoapp/update.html
+++ b/letter_infoapp/templates/letter_infoapp/update.html
@@ -2,7 +2,7 @@
 {% load bootstrap4 %}
 {% block content %}
 
-<header class="header-empty tema-{{ target_letter.letter_content.tema }}" >
+<header class="header-empty " >
         {% if target_letter.progress == 'done' %}
         {%  url 'letterapp:result' pk=target_letter.pk as url %}
         {% else %}
@@ -12,7 +12,7 @@
 </header>
 
 
-<main class="tema-{{ target_letter.letter_content.tema }}"  >
+<main >
   <div class="frame-letter">
         {% include 'snippets/progress.html' %}
         {% include 'snippets/progressinfo.html' %}
