--- a/letter_quizapp/templates/letter_quizapp/create.html
+++ b/letter_quizapp/templates/letter_quizapp/create.html
@@ -16,13 +16,13 @@
 
 </style>
 
-<header class="header-empty tema-{{ target_letter.letter_content.tema }}">
+<header class="header-empty">
         {%  url 'letter_quizapp:list' pk=target_letter.pk as url %}
         {% include 'headersnippets/navback.html' with url=url %}
 </header>
 
 
-<main class="tema-{{ target_letter.letter_content.tema }}"  id="letter_quiz-create">
+<main  id="letter_quiz-create">
     {% if type == 'choice' %}
         {% include 'letter_quizapp/createsnippets/choice.html' %}
     {% elif type == 'answer' %}
