--- a/letterapp/templates/letterapp/result.html
+++ b/letterapp/templates/letterapp/result.html
@@ -11,7 +11,7 @@
 }
 
 </style>
-<header class="header-empty tema-{{ target_letter.letter_content.tema }}">
+<header class="header-empty">
         {%  url 'accountapp:sentmailbox' pk=user.pk as url %}
         {% if page == 'finish' %}
         {% include 'headersnippets/exit.html' with url=url %}
@@ -20,19 +20,18 @@
         {% endif %}
 </header>
 
-<main class="tema-{{ target_letter.letter_content.tema }}">
+<main>
     {% include 'letterapp/resultsnippets/preview.html' %}
     {% include 'letterapp/resultsnippets/info.html' %}
-    {% if user == target_letter.sender %}
-        {% if target_letter.state == 'received' %}
-            {% include 'letterapp/resultsnippets/received.html' %}
-        {% else %}
-            {% include 'letterapp/resultsnippets/link.html' %}
-            {% if not page == 'finish' %}
-            {% include 'letterapp/resultsnippets/btn.html' %}
-            {% endif %}
+    {% if target_letter.state == 'received' %}
+        {% include 'letterapp/resultsnippets/received.html' %}
+    {% else %}
+        {% include 'letterapp/resultsnippets/link.html' %}
+        {% if not page == 'finish' %}
+        {% include 'letterapp/resultsnippets/btn.html' %}
         {% endif %}
     {% endif %}
+    {% include 'letterapp/resultsnippets/resetguide.html' %}
 </main>
 
 {% endblock %}
