--- a/letterapp/templates/letterapp/resultsnippets/preview.html
+++ b/letterapp/templates/letterapp/resultsnippets/preview.html
@@ -1,4 +1,7 @@
 <style>
+#letter-result-preview {
+    padding-top:3rem
+}
 #letter-result-preview .container{
     padding-bottom: 2rem;
     padding-top: 2rem;
@@ -7,13 +10,15 @@
     align-items: center;
     flex-direction: row;
 }
+
 #letter-result-preview .icon-nav{
     font-size: 1.6rem;
     font-weight: var(--fontweight-bold);
     color: var(--black);
 }
+
 </style>
-<a href="{% url 'letter_quizapp:verify' pk=initial_letter.pk %}" class="frame" id="letter-result-preview">
+<a href="{% url 'letter_quizapp:verify' pk=initial_letter.pk %}" class="frame" id="letter-result-preview"  >
     <div  class="container" >
         <div class="item">
         <span class="text-content-bold" >{{ target_letter.letter_info.title|truncatechars:23 }}</span>
