--- a/templates/base.html
+++ b/templates/base.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="ko">
 {%  include 'head.html' %}
-<body >
+<body class="tema-{{ tema }}" id="bodyTema">
     {% block content %}
     {% endblock %}
 </body>
