--- a/letter_quizapp/templates/letter_quizapp/listsnippets/submit.html
+++ b/letter_quizapp/templates/letter_quizapp/listsnippets/submit.html
@@ -9,7 +9,7 @@
             편지 수정 완료
         </a>
     {% endif %}
-    <div id="loading" class="loading">
+    <div style="display: block;"  id="loading" class="loading">
         <div class="spinner"></div>
     </div>
 {% endif %}
