--- a/letter_quizapp/templates/letter_quizapp/listsnippets/zoom.html
+++ b/letter_quizapp/templates/letter_quizapp/listsnippets/zoom.html
@@ -14,8 +14,10 @@
         border-radius: 50%;
         color: var(--softgray);
         margin: 2.5rem auto 0 auto;
+        position: relative;
+        right: 0.3rem;
     }
-    
+
     #frame-zoom1 .spacing-horizontal-stretch{
         padding-left: var(--padding-frame);
         padding-right: var(--padding-frame);
