--- a/letterapp/templates/letterapp/infosnippets/link.html
+++ b/letterapp/templates/letterapp/infosnippets/link.html
@@ -38,7 +38,7 @@
                 <span class="icon material-icons">download</span>
             </div>
         </a>
-        <button onclick="copyLetterUrl('복사한 편지 링크를 홈 화면에서 검색할 수 있어요!')"  class="container" data-url="{{target_letter.url}}">
+        <button onclick="copyLetterUrl('편지 링크가 복사되었습니다! 자유롭게 공유해 보세요')"  class="container" data-url="{{target_letter.url}}">
             <div class="item-image">
                 <img class="img" src='/static/icons/guide/url.png'>
             </div>
