--- a/letterapp/templates/letterapp/detailsnippets/info.html
+++ b/letterapp/templates/letterapp/detailsnippets/info.html
@@ -59,7 +59,7 @@
         </div>
 
         {% if target_letter.state != 'saved' %}
-        <button onclick="copyLetterUrl('편지 링크가 복사되었습니다! 자유롭게 공유해 보세요')" class="btn-url" data-url="{{ target_letter.url }}">
+        <button onclick="copyLetterUrl('복사한 편지 링크를 홈 화면에서 검색할 수 있어요!')" class="btn-url" data-url="{{ target_letter.url }}">
             <div class="text-content text-id">편지 링크</div>
             <span class="icon-copy material-icons">content_copy</span>
         </button>
