--- a/letterapp/templates/letterapp/lettersnippets/info.html
+++ b/letterapp/templates/letterapp/lettersnippets/info.html
@@ -54,7 +54,7 @@
 <div class="frame" id="letter-detail-info">
     <div class="spacing-horizontal">
         <div class="item-title">
-            <span class="text-title">To. {{ letter_info.receiver }}</span>
+            <span class="text-title">To. {{ letter_info.receiver }}{{ arget_letter.expire_from }}</span>
             <div class="line-title"></div>
         </div>
 
