--- a/letterapp/templates/letterapp/saved.html
+++ b/letterapp/templates/letterapp/saved.html
@@ -22,7 +22,7 @@
             저장한 목록에서 확인 가능하며<br>
             언제든 저장 해제할 수 있어요!
         </div>
-        <a href="{% url 'letterapp:saveinfo' pk=target_letter.pk %}?from=saved" class="btn-nav">
+        <a href="{% url 'letterapp:result' pk=target_letter.pk %}?from=finish" class="btn-nav">
             저장한 편지 보기
         </a>
     </div>
