--- a/static/css/form.css
+++ b/static/css/form.css
@@ -234,6 +234,7 @@ form .form-check .form-check-label {
 
 }
 /* selectmultiple */
+.label-selectmultiple,
 .selectmultiple label{
     display: flex;
     flex-direction:row;
