--- a/templates/snippets/letter.html
+++ b/templates/snippets/letter.html
@@ -100,16 +100,16 @@
 
     {% if forloop.counter|divisibleby:2 %}
         {% if user == letter.saver %}
-            <a href="{% url 'letterapp:saveinfo' pk=letter.pk %}" class="container-snippets container-right">
+            <a href="{% url 'letterapp:result' pk=letter.pk %}" class="container-snippets container-right">
         {% else %}
-            <a href="{% url 'letterapp:writeinfo' pk=letter.pk %}" class="container-snippets container-right">
+            <a href="{% url 'letterapp:result' pk=letter.pk %}" class="container-snippets container-right">
         {% endif %}
         <div class="icon-left"></div>
     {% else %}
         {% if user == letter.saver %}
             <a href="{% url 'letterapp:intro' pk=letter.pk %}" class="container-snippets container-left">
         {% else %}
-            <a href="{% url 'letterapp:writeinfo' pk=letter.pk %}" class="container-snippets container-left">
+            <a href="{% url 'letterapp:result' pk=letter.pk %}" class="container-snippets container-left">
         {% endif %}
         <div class="icon-right"></div>
     {% endif %}
