--- a/letter_contentapp/templates/letter_contentapp/update.html
+++ b/letter_contentapp/templates/letter_contentapp/update.html
@@ -65,7 +65,7 @@
     {% url 'letter_infoapp:update' pk=target_letter.letter_info.pk as url %}
     {% include 'headersnippets/back.html' with url=url %}
     {% if target_letter.progress == 'done' %}
-    {%  url 'letterapp:writeinfo' pk=target_letter.pk as url %}
+    {%  url 'letterapp:result' pk=target_letter.pk as url %}
     {% else %}
     {%  url 'letterapp:create'  as url %}
     {% endif %}
