--- a/letter_quizapp/templates/letter_quizapp/preview.html
+++ b/letter_quizapp/templates/letter_quizapp/preview.html
@@ -2,23 +2,17 @@
 {% block content %}
 <header class="header-empty">
         {% if user == target_letter.writer %}
-        {%  url 'letterapp:writeinfo' pk=target_letter.pk as url %}
-        {% elif user == target_letter.saver %}
-        {%  url 'letterapp:saveinfo' pk=target_letter.pk as url %}
+        {%  url 'letterapp:result' pk=target_letter.pk as url %}
+        {% else %}
+        {%  url 'letterapp:result' pk=target_letter.pk as url %}
         {% endif %}
         {% include 'headersnippets/exit.html' with url=url %}
 </header>
 
 
 <main>
-    {% include 'letter_quizapp/verifysnippets/question.html' %}
-    {% if target_quiz.type == 'choice' %}
-        {% include 'letter_quizapp/verifysnippets/choice.html' %}
-    {% elif target_quiz.type == 'word' %}
-        {% include 'letter_quizapp/verifysnippets/word.html' %}
-    {% else %}
-        {% include 'letter_quizapp/verifysnippets/date.html' %}
-    {% endif %}
+    {% include 'letter_quizapp/quizsnippets/question.html' %}
+    {% include 'letter_quizapp/quizsnippets/answer.html' %}
 </main>
 
 
