--- a/letterapp/templates/letterapp/lettersnippets/checkguide.html
+++ b/letterapp/templates/letterapp/lettersnippets/checkguide.html
@@ -53,7 +53,7 @@
             </span>
             <span class="text-title">
                 <span class="icon material-icons">done</span>
-                편지를 저장하면 사라지지 않으며,
+                사라지지 않게 편지를 저장하면
             </span>
             <span class="text-title">
                 <span class="icon material-icons">done</span>
