--- a/letterapp/templates/letterapp/resultsnippets/preview.html
+++ b/letterapp/templates/letterapp/resultsnippets/preview.html
@@ -15,7 +15,7 @@
 }
 
 </style>
-<a href="{% url 'letter_quizapp:verify' pk=target_letter.initial_quiz.pk %}" class="frame frame-top" id="letter-info-preview"  >
+<a href="{% url 'letter_quizapp:preview' pk=target_letter.initial_quiz.pk %}" class="frame frame-top" id="letter-info-preview"  >
     <div class="container">
         <div class="item">
             <span class="text-content-bold" >{{ target_letter.letter_info.title|truncatechars:23 }}</span>
