--- a/letterapp/templates/letterapp/lettersnippets/screenshot.html
+++ b/letterapp/templates/letterapp/lettersnippets/screenshot.html
@@ -6,13 +6,21 @@
 </style>
 <button id="download-button" class="btn-etc material-icons" data-letter-title="{{ target_letter.screenshot_name }}">download</button>
 <script>
-    document.getElementById('download-button').addEventListener('click', function() {
+document.getElementById('download-button').addEventListener('click', function() {
     var button = this;
     var letterTitle = button.getAttribute('data-letter-title');
-    html2canvas(document.querySelector("#letter-preview")).then(canvas => {
-        // Create an image
+
+    html2canvas(document.querySelector("#letter-preview"), {
+        onclone: function(clonedDoc) {
+            var img = clonedDoc.getElementById('mage-contetn');
+            if (img) {
+                img.style.objectFit = 'cover';
+                // Additional style adjustments if needed
+            }
+        }
+    }).then(canvas => {
+        // Rest of your code to create and download the image
         var image = canvas.toDataURL("image/png", 1.0).replace("image/png", "image/octet-stream");
-        // Create a link to download
         var link = document.createElement('a');
         link.download = letterTitle + ".png";
         link.href = image;
